--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,14 @@
       src="https://kit.fontawesome.com/45e38e596f.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/45e38e596f.js"
+      crossorigin="anonymous"
+    ></script> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
